# mva

./: .gitignore  README.md
docs/error/: Gui_San_cap_nhat_17042026_Danh_sach_Outing_19042026_sap_FL_va_HDC.xlsx
docs/implementation-artifacts/: 1-1-initialize-mobile-project-and-offline-architecture-baseline.md  1-2-implement-app-bootstrap-and-model-warm-up.md  1-3-establish-offline-only-configuration-and-security-baseline.md  2-1-start-and-stop-meeting-capture-from-the-meeting-screen.md  2-2-capture-microphone-audio-continuously-in-the-native-layer.md  2-3-process-audio-chunks-through-vad-and-filter-silence.md  2-4-emit-streaming-partial-transcript-during-active-speech.md  2-5-emit-final-transcript-and-detected-language-at-utterance-end.md  3-1-build-apple-translator-module-for-ios.md  3-2-build-opus-mt-translator-module-for-android.md  3-3-build-unified-translation-service.md  3-4-translate-final-stt-results-to-vietnamese-on-device.md  3-5-translate-partial-stt-results-as-draft-translations.md  3-6-implement-translation-cancellation-and-concurrency-control.md  3-7-implement-vietnamese-passthrough-without-translation.md  4-1-build-meeting-screen-with-two-lane-layout.md  4-2-implement-recording-indicator-and-session-timer.md  5-2-implement-speaker-cluster-service.md  (+21 more)
mobile/: .gitignore  Gemfile  README.md  metro.config.js  package-lock.json  package.json
mobile/android/app/src/main/cpp/: CMakeLists.txt  OnLoad.cpp  SpeakerEmbeddingModule.cpp
scripts/: export_onnx_eager.py  export_onnx_manual.py  export_simple.py  manual_export_onnx.py  prepare_opus_mt_android.py
(+94 files in other folders)
